--- a/Quarks/Quarks.csproj
+++ b/Quarks/Quarks.csproj
@@ -115,6 +115,9 @@
     <Compile Include="AppSettings.cs" />
     <Compile Include="AssemblyExtensions\GetIsDebugBuild.cs" />
     <Compile Include="AttributeHelper.cs" />
+    <Compile Include="CultureInfoExtensions\CultureOverride.cs" />
+    <Compile Include="CultureInfoExtensions\FormatOverride.cs" />
+    <Compile Include="CultureInfoExtensions\LanguageOverride.cs" />
     <Compile Include="DiagnosticsTextWriter.cs" />
     <Compile Include="DynamicDictionary.cs" />
     <Compile Include="EnumExtensions\GetAttributeOfType.cs" />
