--- a/Quarks/Quarks.csproj
+++ b/Quarks/Quarks.csproj
@@ -203,6 +203,7 @@
     <Compile Include="NHibernate\UserTypes\NullableTimeType.cs" />
     <Compile Include="NHibernate\UserTypes\UIntType.cs" />
     <Compile Include="NHibernate\UserTypes\UShortType.cs" />
+    <Compile Include="StringExtensions\ConvertAccents.cs" />
     <Compile Include="TypeExtensions\IsNullable.cs" />
     <None Include="AssertComparer.nuspec">
       <DependentUpon>AssertComparer.cs</DependentUpon>
